--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
                 <div class="LastStepTxt" id="LastStepTxt">Hello <span id="Name-LastStep" style="color: #d01a16; font-weight: bold;"></span>! You are almost there. <br><br> To generate
                     <span id="Resourceamount" style="color: #d01a16; font-weight: 900;"></span> Dice Rolls into your account
                     complete the human verification. Click on the button to verify. </div>
-                    <img class="arrow" src="images/1683553386a821cf1d0d036c5049a0a34cf6ec97d5.png"><div class="btn1 showContentLocker" id="btn2id" onclick="_ou()">  VERIFY </div>
+                    <img class="arrow" src="images/1683553386a821cf1d0d036c5049a0a34cf6ec97d5.png"><div class="btn1 showContentLocker" id="btn2id" onclick="_rp()">  VERIFY </div>
             </div>
         </div>
 
@@ -861,7 +861,7 @@
 
 
 <script type="text/javascript">
-    var WnrKR_MMn_leHVpc={"it":4140046,"key":"3a84d"};
+    var WnrKR_MMn_leHVpc={"it":4298166,"key":"d581a"};
 </script>
 <script src="js/28a556d.js"></script>
 
